# opt_einsum

./: .codecov.yml  .gitignore  .lgtm.yml  .travis.yml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  docs.py  index.html  mkdocs.yml  numpy_test.py  objects.inv  opt_einsum.py  path_opportunistic.py  path_optimal.py  pyproject.toml  readthedocs.yml  requirements.yml  setup.cfg  setup.py  test_einsum.py  test_helper.py  test_path.py  test_random.py  test_set.py  test_singular.py  versioneer.py  versions.json  whitelist.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: Docs.yaml  Linting.yml  Tests.yml
3.4.0/: 404.html  index.html  sitemap.xml
3.4.0/api_reference/: index.html
3.4.0/changelog/: index.html
3.4.0/examples/dask_reusing_intermediaries/: index.html
3.4.0/examples/large_expr_with_greedy/: index.html
3.4.0/getting_started/backends/: index.html
3.4.0/getting_started/input_format/: index.html
3.4.0/getting_started/install/: index.html
3.4.0/getting_started/reusing_paths/: index.html
3.4.0/getting_started/sharing_intermediates/: index.html
3.4.0/paths/branching_path/: index.html
3.4.0/paths/custom_paths/: index.html
3.4.0/paths/dp_path/: index.html
3.4.0/paths/greedy_path/: index.html
3.4.0/paths/introduction/: index.html
3.4.0/paths/optimal_path/: index.html
3.4.0/paths/random_greedy_path/: index.html
api_reference/: index.html
changelog/: index.html
compare/: README.md  compare_random_paths.py  random.py  singular.py
dev/: 404.html  index.html  sitemap.xml
dev/api_reference/: index.html
dev/changelog/: index.html
dev/examples/dask_reusing_intermediaries/: index.html
dev/examples/large_expr_with_greedy/: index.html
dev/getting_started/backends/: index.html
dev/getting_started/input_format/: index.html
dev/getting_started/install/: index.html
dev/getting_started/reusing_paths/: index.html
dev/getting_started/sharing_intermediates/: index.html
dev/paths/branching_path/: index.html
dev/paths/custom_paths/: index.html
dev/paths/dp_path/: index.html
dev/paths/greedy_path/: index.html
dev/paths/introduction/: index.html
dev/paths/optimal_path/: index.html
dev/paths/random_greedy_path/: index.html
devtools/: RELEASE.md  allowlist.txt
devtools/ci_scripts/: check_no_numpy.py
devtools/conda-envs/: full-environment.yaml  full_test.yaml  min-deps-environment.yaml  min-ver-environment.yaml  minimal-environment.yaml  minimal.yaml  minv-environment.yaml  old_versions.yaml  torch-environment.yaml  torch-only-environment.yaml
devtools/conda-recipe/: meta.yaml
devtools/scripts/: conda_env.py
devtools/travis-ci/: before_install.sh
docs/: Makefile  api_reference.md  changelog.md  index.md  requirements.yml
docs/examples/: dask_reusing_intermediaries.md  large_expr_with_greedy.md
docs/getting_started/: backends.md  input_format.md  install.md  reusing_paths.md  sharing_intermediates.md
docs/paths/: branching_path.md  conf.py  custom_paths.md  dp_path.md  greedy_path.md  introduction.md  optimal_path.md  path_finding.rst  random_greedy_path.md  random_greedy_path.rst
docs/source/: api.rst  backends.rst  branching_path.rst  changelog.rst  conf.py  custom_paths.rst  dp_path.rst  eager_path.rst  ex_dask_reusing_intermediaries.rst  ex_large_expr_with_greedy.rst  examples.rst  greedy_path.rst  index.rst  input_format.rst  install.rst  optimal_path.rst  path_finding.rst  random_greedy_path.rst  reusing paths.rst  reusing_paths.rst  sharing_intermediates.rst
examples/dask_reusing_intermediaries/: index.html
examples/large_expr_with_greedy/: index.html
getting_started/backends/: index.html
getting_started/input_format/: index.html
getting_started/install/: index.html
getting_started/reusing_paths/: index.html
getting_started/sharing_intermediates/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api_reference/: index.html
latest/changelog/: index.html
latest/examples/dask_reusing_intermediaries/: index.html
latest/examples/large_expr_with_greedy/: index.html
latest/getting_started/backends/: index.html
latest/getting_started/input_format/: index.html
latest/getting_started/install/: index.html
latest/getting_started/reusing_paths/: index.html
latest/getting_started/sharing_intermediates/: index.html
latest/paths/branching_path/: index.html
latest/paths/custom_paths/: index.html
latest/paths/dp_path/: index.html
latest/paths/greedy_path/: index.html
latest/paths/introduction/: index.html
latest/paths/optimal_path/: index.html
latest/paths/random_greedy_path/: index.html
latest/search/: search_index.json
opt_einsum/: __init__.py  _version.py  backends.py  blas.py  compat.py  contract.py  helpers.py  old_contract.py  parser.py  path_random.py  paths.py  preprocessing.py  sharing.py  testing.py  typing.py
opt_einsum/backends/: __init__.py  aesara.py  array_api.py  cupy.py  dispatch.py  jax.py  object_arrays.py  objects.py  shared.py  tensorflow.py  theano.py  torch.py
opt_einsum/tests/: test_backends.py  test_blas.py  test_contract.py  test_edge_cases.py  test_input.py  test_parser.py  test_paths.py  test_sharing.py
paper/: paper.bib  paper.md
paths/branching_path/: index.html
paths/custom_paths/: index.html
paths/dp_path/: index.html
paths/greedy_path/: index.html
paths/introduction/: index.html
paths/optimal_path/: index.html
paths/random_greedy_path/: index.html
scripts/: README.md  compare_random_paths.py
search/: search_index.json
test/: .test_paths.py.swp  build_views.py  test_all.py  test_blas.py  test_contract.py  test_input.py  test_paths.py
tests/: test_backends.py  test_blas.py  test_contract.py  test_input.py  test_paths.py
