[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0', 'hatch-vcs']
build-backend = 'hatchling.build'

[project]
name = 'opt_einsum'
description = 'Path optimization of einsum functions.'
authors = [
    {name = 'Daniel Smith', email = 'dgasmith@icloud.com'},
]
license = 'MIT'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries :: Python Modules',

]
requires-python = '>=3.12'
dependencies = [
    "tensorflow>=2.21.0",
]
dynamic = ['version', 'readme']

[project.urls]
source = "https://github.com/dgasmith/opt_einsum"

[project.optional-dependencies]
dask = ["dask"]
jax = ["jax"]
numpy = ["numpy>=1.23"]
sparse = ["sparse"]
torch = ["torch>=2.0,<3.0"]

test = ["pytest", "pytest-cov"]
lint = ["ruff==0.15.*", "mypy>=1.19,<2.0"]
docs = [
    "ansi2html==1.*",
    "markdown==3.*",
    "markdown-include==0.*",
    "mkdocstrings[python]==0.29.*",
    "mkdocs==1.*",
    "mkdocs-awesome-pages-plugin==2.*",
    "mkdocs-exclude==1.*",
    "mkdocs-material==9.*",
    "pygments==2.*",
]
dev = ["opt_einsum[test,lint]"]

[tool.hatch.version]
source = "vcs"
path = 'opt_einsum/_version.py'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "opt_einsum/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and HISTORY.md
fragments = [
    {path = "README.md"},
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/devtools",
  "/docs",
  "/paper",
  "/scripts"
]

[tool.hatch.build.targets.wheel]
packages = ["opt_einsum"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning:tensorflow',
    'ignore::DeprecationWarning:tensorboard',
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
extend-select = ['RUF100', 'UP', 'C', 'D', 'I', 'N', 'NPY', 'Q', 'T', 'W']
extend-ignore = ['C901', 'D101', 'D102', 'D103', 'D105', 'D107', 'D205', 'D415']
isort = { known-first-party = ['opt_einsum'] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
'opt_einsum/tests/*' = ['D', 'T201', 'NPY002', 'ANN001', 'ANN202']

[tool.coverage.run]
source = ['opt_einsum']
omit = ['*/tests/*', 'opt_einsum/_version.py']
branch = true
relative_files = true

[[tool.mypy.overrides]]
module = "cupy.*, jax.*, numpy.*, theano.*, tensorflow.*, torch.*"
ignore_missing_imports = true
